minor edits and add GA

--- a/service/dfir/dfir/index.html
+++ b/service/dfir/dfir/index.html
@@ -5,19 +5,21 @@
 <meta name=twitter:card content="summary_large_image" key=twcard>
 <meta name=twitter:site content="@IntrusionOps" key=twhandle>
 <title>Digital Forensics and Incident Response &#183; IntrusionOps – MDR, DFIR, Red Team</title>
-<meta name=description content="IntrusionOps provides high quality digital forensic services">
+<meta name=description content="IntrusionOps provides high-quality digital forensic services.">
 <meta name=keywords content="Red Team,DFIR,MDR,incident response,adversary simulation,threat hunting,ransomware readiness,penetration test,pentest,c2,implant,malware,tunnel,reverse shell">
 <meta property="og:url" content="/service/dfir/dfir/">
 <meta property="og:title" content="Digital Forensics and Incident Response &#183; IntrusionOps – MDR, DFIR, Red Team">
-<meta name=og:description content="IntrusionOps provides high quality digital forensic services">
+<meta name=og:description content="IntrusionOps provides high-quality digital forensic services.">
 <meta name=twitter:url content="/service/dfir/dfir/">
 <meta property="og:image" content="images/logo.svg" key=ogimage>
 <link rel=canonical href=../../../service/dfir/dfir/>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1">
-<meta name=description content="IntrusionOps provides high quality digital forensic services">
+<meta name=description content="IntrusionOps provides high-quality digital forensic services.">
 <meta name=author content="IntrusionOps">
 <meta name=generator content="Hugo 0.92.2">
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QH1VB8LNCS"></script>
+<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-QH1VB8LNCS')</script>
 <meta name=keywords content>
 <meta name=robots content="index,follow">
 <noscript>
