--- a/service/dfir/index.html
+++ b/service/dfir/index.html
@@ -18,6 +18,8 @@
 <meta name=description content="We offer DFIR retainers, ad-hoc incident response, and full integration into your existing DFIR or CSIRT teams.">
 <meta name=author content="IntrusionOps">
 <meta name=generator content="Hugo 0.92.2">
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QH1VB8LNCS"></script>
+<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-QH1VB8LNCS')</script>
 <meta name=keywords content>
 <meta name=robots content="index,follow">
 <noscript>
@@ -111,7 +113,7 @@ Digital Forensics & Incident Response
 <h4 class=card-title>
 <a class=text-dark href=../../service/dfir/dfir/>Digital Forensics and Incident Response</a>
 </h4>
-<p class=card-text>IntrusionOps provides high quality digital forensic services</p>
+<p class=card-text>IntrusionOps provides high-quality digital forensic services.</p>
 <a href=../../service/dfir/dfir/ class="btn btn-secondary btn-arrow">Read More</a>
 </div>
 </div>
@@ -139,7 +141,7 @@ Digital Forensics & Incident Response
 <h4 class=card-title>
 <a class=text-dark href=../../service/dfir/csirt/>CSIRT Services</a>
 </h4>
-<p class=card-text>IntrusionOps can act as your company&rsquo;s CSIRT or augment your existing CSIRT team.</p>
+<p class=card-text>IntrusionOps can act as your CSIRT or augment your existing CSIRT team.</p>
 <a href=../../service/dfir/csirt/ class="btn btn-secondary btn-arrow">Read More</a>
 </div>
 </div>
