--- a/service/redteam/cloudsec/index.html
+++ b/service/redteam/cloudsec/index.html
@@ -18,6 +18,8 @@
 <meta name=description content="Security reviews of AWS, GCP, and Microsoft 365 / Entra.">
 <meta name=author content="IntrusionOps">
 <meta name=generator content="Hugo 0.92.2">
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QH1VB8LNCS"></script>
+<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-QH1VB8LNCS')</script>
 <meta name=keywords content>
 <meta name=robots content="index,follow">
 <noscript>
