--- a/service/redteam/index.html
+++ b/service/redteam/index.html
@@ -18,6 +18,8 @@
 <meta name=description content="Red Team Services">
 <meta name=author content="IntrusionOps">
 <meta name=generator content="Hugo 0.92.2">
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QH1VB8LNCS"></script>
+<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-QH1VB8LNCS')</script>
 <meta name=keywords content>
 <meta name=robots content="index,follow">
 <noscript>
@@ -97,7 +99,7 @@ Red Team
 <h4 class=card-title>
 <a class=text-dark href=../../service/redteam/pentest/>Penetration Testing</a>
 </h4>
-<p class=card-text>IntrusionOps professional hackers target your networks and applications.</p>
+<p class=card-text>IntrusionOps' professional hackers target your networks and applications.</p>
 <a href=../../service/redteam/pentest/ class="btn btn-secondary btn-arrow">Read More</a>
 </div>
 </div>
@@ -109,9 +111,9 @@ Red Team
 <img class="card-img-top rounded-0" src=../../images/service/red_test.webp alt="Card image cap">
 <div class="card-body position-relative">
 <h4 class=card-title>
-<a class=text-dark href=../../service/redteam/rt/>Red Teaming</a>
+<a class=text-dark href=../../service/redteam/rt/>Red Team</a>
 </h4>
-<p class=card-text>Red Teaming provides real-world validation of your defensive technical controls, detections, and process.</p>
+<p class=card-text>Red Teaming provides real-world validation of your defensive controls and detection capabilities.</p>
 <a href=../../service/redteam/rt/ class="btn btn-secondary btn-arrow">Read More</a>
 </div>
 </div>
