--- a/service/redteam/rt/index.html
+++ b/service/redteam/rt/index.html
@@ -4,20 +4,22 @@
 <meta property="og:type" content="website">
 <meta name=twitter:card content="summary_large_image" key=twcard>
 <meta name=twitter:site content="@IntrusionOps" key=twhandle>
-<title>Red Teaming &#183; IntrusionOps – MDR, DFIR, Red Team</title>
-<meta name=description content="Red Teaming provides real-world validation of your defensive technical controls, detections, and process.">
+<title>Red Team &#183; IntrusionOps – MDR, DFIR, Red Team</title>
+<meta name=description content="Red Teaming provides real-world validation of your defensive controls and detection capabilities.">
 <meta name=keywords content="Red Team,DFIR,MDR,incident response,adversary simulation,threat hunting,ransomware readiness,penetration test,pentest,c2,implant,malware,tunnel,reverse shell">
 <meta property="og:url" content="/service/redteam/rt/">
-<meta property="og:title" content="Red Teaming &#183; IntrusionOps – MDR, DFIR, Red Team">
-<meta name=og:description content="Red Teaming provides real-world validation of your defensive technical controls, detections, and process.">
+<meta property="og:title" content="Red Team &#183; IntrusionOps – MDR, DFIR, Red Team">
+<meta name=og:description content="Red Teaming provides real-world validation of your defensive controls and detection capabilities.">
 <meta name=twitter:url content="/service/redteam/rt/">
 <meta property="og:image" content="images/logo.svg" key=ogimage>
 <link rel=canonical href=../../../service/redteam/rt/>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1">
-<meta name=description content="Red Teaming provides real-world validation of your defensive technical controls, detections, and process.">
+<meta name=description content="Red Teaming provides real-world validation of your defensive controls and detection capabilities.">
 <meta name=author content="IntrusionOps">
 <meta name=generator content="Hugo 0.92.2">
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QH1VB8LNCS"></script>
+<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-QH1VB8LNCS')</script>
 <meta name=keywords content>
 <meta name=robots content="index,follow">
 <noscript>
@@ -78,7 +80,7 @@ Services
 <a class=text-white href=../../../></a>
 </li>
 <li style=font-size:16px;text-transform:capitalize class="breadcrumb-item font-weight-semebold active text-primary" aria-current=page>
-Red Teaming
+Red Team
 </li>
 </ol>
 </nav>
@@ -88,9 +90,9 @@ Red Teaming
 </section>
 <section class=section>
 <div class=container>
-<h2>Red Teaming</h2>
+<h2>Red Team</h2>
 <div class=content>
-<p><strong>Red Teaming provides real-world validation of your defensive technical controls, detections, and process.</strong></p>
+<p><strong>Red Teaming provides real-world validation of your defensive technical controls, detection capabilities, and IR processes.</strong></p>
 <p>You&rsquo;ve invested substantial time and money in endpoint protection, patch management, firewalls, vulnerability scanning, SIEM, 24x7 monitoring, have a threat hunting program, and authored incident response playbooks, but how do you know its all working as designed? Red Teaming is the ultimate quality assurance test of your whole defensive program.</p>
 <blockquote>
 <p><em><strong>A Red Team exercise provides technical and non-technical leadership alike answers to the important question &ldquo;How would we fare against a targeted cyber attack and are our defensive investments working?"</strong></em></p>
