--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <meta name=description content="IntrusionOps provides Digital Forensics and Incident Response (DFIR), Managed Detection and Response (MDR), Red Team and general security services for companies ranging in size from a handful of founders with little more than an idea to multinational corporations.  Rather than apply a cookie cutter approach, we deliver the services our clients need in the manner that’s most actionable to them at their current scale.">
 <meta name=author content="IntrusionOps">
 <meta name=generator content="Hugo 0.92.2">
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QH1VB8LNCS"></script>
+<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-QH1VB8LNCS')</script>
 <meta name=keywords content>
 <meta name=robots content="index,follow">
 <noscript>
