--- a/service/dfir/csirt/index.html
+++ b/service/dfir/csirt/index.html
@@ -5,19 +5,21 @@
 <meta name=twitter:card content="summary_large_image" key=twcard>
 <meta name=twitter:site content="@IntrusionOps" key=twhandle>
 <title>CSIRT Services &#183; IntrusionOps – MDR, DFIR, Red Team</title>
-<meta name=description content="IntrusionOps can act as your company's CSIRT or augment your existing CSIRT team.">
+<meta name=description content="IntrusionOps can act as your CSIRT or augment your existing CSIRT team.">
 <meta name=keywords content="Red Team,DFIR,MDR,incident response,adversary simulation,threat hunting,ransomware readiness,penetration test,pentest,c2,implant,malware,tunnel,reverse shell">
 <meta property="og:url" content="/service/dfir/csirt/">
 <meta property="og:title" content="CSIRT Services &#183; IntrusionOps – MDR, DFIR, Red Team">
-<meta name=og:description content="IntrusionOps can act as your company's CSIRT or augment your existing CSIRT team.">
+<meta name=og:description content="IntrusionOps can act as your CSIRT or augment your existing CSIRT team.">
 <meta name=twitter:url content="/service/dfir/csirt/">
 <meta property="og:image" content="images/logo.svg" key=ogimage>
 <link rel=canonical href=../../../service/dfir/csirt/>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1">
-<meta name=description content="IntrusionOps can act as your company's CSIRT or augment your existing CSIRT team.">
+<meta name=description content="IntrusionOps can act as your CSIRT or augment your existing CSIRT team.">
 <meta name=author content="IntrusionOps">
 <meta name=generator content="Hugo 0.92.2">
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QH1VB8LNCS"></script>
+<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-QH1VB8LNCS')</script>
 <meta name=keywords content>
 <meta name=robots content="index,follow">
 <noscript>
