opengraph fixes and misc changes

--- a/service/redteam/index.html
+++ b/service/redteam/index.html
@@ -4,15 +4,18 @@
 <meta property="og:type" content="website">
 <meta name=twitter:card content="summary_large_image" key=twcard>
 <meta name=twitter:site content="@IntrusionOps" key=twhandle>
+<meta name=twitter:description content="IntrusionOps provides Digital Forensics and Incident Response (DFIR), Managed Detection and Response (MDR), Red Team and general security services for companies ranging in size from a handful of founders with little more than an idea to multinational corporations.  Rather than apply a cookie cutter approach, we deliver the services our clients need in the manner that’s most actionable to them at their current scale.">
 <title>Red Team &#183; IntrusionOps – MDR, DFIR, Red Team</title>
 <meta name=description content="Red Team Services">
 <meta name=keywords content="Red Team,DFIR,MDR,incident response,adversary simulation,threat hunting,ransomware readiness,penetration test,pentest,c2,implant,malware,tunnel,reverse shell">
-<meta property="og:url" content="/service/redteam/">
+<meta property="og:url" content="https://intrusionops.com/service/redteam/">
 <meta property="og:title" content="Red Team &#183; IntrusionOps – MDR, DFIR, Red Team">
 <meta name=og:description content="Red Team Services">
-<meta name=twitter:url content="/service/redteam/">
-<meta property="og:image" content="images/logo.svg" key=ogimage>
-<link rel=canonical href=../../service/redteam/>
+<meta name=twitter:url content="https://intrusionops.com/service/redteam/">
+<meta name=twitter:title content="IntrusionOps – MDR, DFIR, Red Team">
+<meta property="og:image" content="https://intrusionops.com/images/iopsog.png" key=ogimage>
+<meta property="twitter:image" content="https://intrusionops.com/images/iopsog.png">
+<link rel=canonical href=https://intrusionops.com/service/redteam/>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1">
 <meta name=description content="Red Team Services">
@@ -29,7 +32,7 @@
 <link rel=stylesheet href=../../plugins/animate/animate.css>
 <link rel=stylesheet href=../../plugins/venobox/venobox.css>
 </noscript>
-<link rel=stylesheet href=../../scss/style.min.423ba455943a6288b64eb4d371c2c2d8bf0837b939c88a3341f70127d2e787e9.css integrity="sha256-QjukVZQ6Yoi2TrTTccLC2L8IN7k5yIozQfcBJ9Lnh+k=" media=screen>
+<link rel=stylesheet href=https://intrusionops.com/scss/style.min.423ba455943a6288b64eb4d371c2c2d8bf0837b939c88a3341f70127d2e787e9.css integrity="sha256-QjukVZQ6Yoi2TrTTccLC2L8IN7k5yIozQfcBJ9Lnh+k=" media=screen>
 <link rel="shortcut icon" href=../../images/favicon.ico type=image/x-icon>
 <link rel=icon href=../../images/favicon.ico type=image/x-icon>
 </head>
@@ -92,99 +95,99 @@ Red Team
 <div class=container>
 <div class=row>
 <div class="col-lg-4 col-sm-6 mb-4">
-<a href=../../service/redteam/pentest/>
+<a href=https://intrusionops.com/service/redteam/pentest/>
 <div class="card border-0 rounded-0 box-shadow">
 <img class="card-img-top rounded-0" src=../../images/service/penetration.webp alt="Card image cap">
 <div class="card-body position-relative">
 <h4 class=card-title>
-<a class=text-dark href=../../service/redteam/pentest/>Penetration Testing</a>
+<a class=text-dark href=https://intrusionops.com/service/redteam/pentest/>Penetration Testing</a>
 </h4>
 <p class=card-text>IntrusionOps' professional hackers target your networks and applications.</p>
-<a href=../../service/redteam/pentest/ class="btn btn-secondary btn-arrow">Read More</a>
+<a href=https://intrusionops.com/service/redteam/pentest/ class="btn btn-secondary btn-arrow">Read More</a>
 </div>
 </div>
 </a>
 </div>
 <div class="col-lg-4 col-sm-6 mb-4">
-<a href=../../service/redteam/rt/>
+<a href=https://intrusionops.com/service/redteam/rt/>
 <div class="card border-0 rounded-0 box-shadow">
 <img class="card-img-top rounded-0" src=../../images/service/red_test.webp alt="Card image cap">
 <div class="card-body position-relative">
 <h4 class=card-title>
-<a class=text-dark href=../../service/redteam/rt/>Red Team</a>
+<a class=text-dark href=https://intrusionops.com/service/redteam/rt/>Red Team</a>
 </h4>
 <p class=card-text>Red Teaming provides real-world validation of your defensive controls and detection capabilities.</p>
-<a href=../../service/redteam/rt/ class="btn btn-secondary btn-arrow">Read More</a>
+<a href=https://intrusionops.com/service/redteam/rt/ class="btn btn-secondary btn-arrow">Read More</a>
 </div>
 </div>
 </a>
 </div>
 <div class="col-lg-4 col-sm-6 mb-4">
-<a href=../../service/redteam/phy/>
+<a href=https://intrusionops.com/service/redteam/phy/>
 <div class="card border-0 rounded-0 box-shadow">
 <img class="card-img-top rounded-0" src=../../images/service/physical_red.webp alt="Card image cap">
 <div class="card-body position-relative">
 <h4 class=card-title>
-<a class=text-dark href=../../service/redteam/phy/>Physical Red Team</a>
+<a class=text-dark href=https://intrusionops.com/service/redteam/phy/>Physical Red Team</a>
 </h4>
 <p class=card-text>Physical Red Teaming engagements challenge your office&rsquo;s security controls and processes.</p>
-<a href=../../service/redteam/phy/ class="btn btn-secondary btn-arrow">Read More</a>
+<a href=https://intrusionops.com/service/redteam/phy/ class="btn btn-secondary btn-arrow">Read More</a>
 </div>
 </div>
 </a>
 </div>
 <div class="col-lg-4 col-sm-6 mb-4">
-<a href=../../service/redteam/soceng/>
+<a href=https://intrusionops.com/service/redteam/soceng/>
 <div class="card border-0 rounded-0 box-shadow">
 <img class="card-img-top rounded-0" src=../../images/service/social_eng.webp alt="Card image cap">
 <div class="card-body position-relative">
 <h4 class=card-title>
-<a class=text-dark href=../../service/redteam/soceng/>Social Engineering</a>
+<a class=text-dark href=https://intrusionops.com/service/redteam/soceng/>Social Engineering</a>
 </h4>
 <p class=card-text>Understand your company&rsquo;s readiness for social engineering attacks.</p>
-<a href=../../service/redteam/soceng/ class="btn btn-secondary btn-arrow">Read More</a>
+<a href=https://intrusionops.com/service/redteam/soceng/ class="btn btn-secondary btn-arrow">Read More</a>
 </div>
 </div>
 </a>
 </div>
 <div class="col-lg-4 col-sm-6 mb-4">
-<a href=../../service/redteam/purple/>
+<a href=https://intrusionops.com/service/redteam/purple/>
 <div class="card border-0 rounded-0 box-shadow">
 <img class="card-img-top rounded-0" src=../../images/service/purple_test.webp alt="Card image cap">
 <div class="card-body position-relative">
 <h4 class=card-title>
-<a class=text-dark href=../../service/redteam/purple/>Purple Teaming</a>
+<a class=text-dark href=https://intrusionops.com/service/redteam/purple/>Purple Teaming</a>
 </h4>
 <p class=card-text>Collaboration between Red and Blue Teams for validation and improvement of detection capabilities.</p>
-<a href=../../service/redteam/purple/ class="btn btn-secondary btn-arrow">Read More</a>
+<a href=https://intrusionops.com/service/redteam/purple/ class="btn btn-secondary btn-arrow">Read More</a>
 </div>
 </div>
 </a>
 </div>
 <div class="col-lg-4 col-sm-6 mb-4">
-<a href=../../service/redteam/cloudsec/>
+<a href=https://intrusionops.com/service/redteam/cloudsec/>
 <div class="card border-0 rounded-0 box-shadow">
 <img class="card-img-top rounded-0" src=../../images/service/cloudsec.webp alt="Card image cap">
 <div class="card-body position-relative">
 <h4 class=card-title>
-<a class=text-dark href=../../service/redteam/cloudsec/>Cloud Security Reviews</a>
+<a class=text-dark href=https://intrusionops.com/service/redteam/cloudsec/>Cloud Security Reviews</a>
 </h4>
 <p class=card-text>Security reviews of AWS, GCP, and Microsoft 365 / Entra.</p>
-<a href=../../service/redteam/cloudsec/ class="btn btn-secondary btn-arrow">Read More</a>
+<a href=https://intrusionops.com/service/redteam/cloudsec/ class="btn btn-secondary btn-arrow">Read More</a>
 </div>
 </div>
 </a>
 </div>
 <div class="col-lg-4 col-sm-6 mb-4">
-<a href=../../service/redteam/rra/>
+<a href=https://intrusionops.com/service/redteam/rra/>
 <div class="card border-0 rounded-0 box-shadow">
 <img class="card-img-top rounded-0" src=../../images/service/rra.webp alt="Card image cap">
 <div class="card-body position-relative">
 <h4 class=card-title>
-<a class=text-dark href=../../service/redteam/rra/>Ransomware Readiness</a>
+<a class=text-dark href=https://intrusionops.com/service/redteam/rra/>Ransomware Readiness</a>
 </h4>
 <p class=card-text>Red Team driven drills to measure your readiness for ransomware attacks.</p>
-<a href=../../service/redteam/rra/ class="btn btn-secondary btn-arrow">Read More</a>
+<a href=https://intrusionops.com/service/redteam/rra/ class="btn btn-secondary btn-arrow">Read More</a>
 </div>
 </div>
 </a>
@@ -251,6 +254,6 @@ Red Team
 <script src=../../plugins/search/fuse.min.js></script>
 <script src=../../plugins/search/mark.js></script>
 <script src=../../plugins/search/search.js></script>
-<script src=../../js/script.min.js></script>
+<script src=https://intrusionops.com/js/script.min.js></script>
 </body>
 </html>
