--- a/service/dfir/csirt/index.html
+++ b/service/dfir/csirt/index.html
@@ -4,15 +4,18 @@
 <meta property="og:type" content="website">
 <meta name=twitter:card content="summary_large_image" key=twcard>
 <meta name=twitter:site content="@IntrusionOps" key=twhandle>
+<meta name=twitter:description content="IntrusionOps provides Digital Forensics and Incident Response (DFIR), Managed Detection and Response (MDR), Red Team and general security services for companies ranging in size from a handful of founders with little more than an idea to multinational corporations.  Rather than apply a cookie cutter approach, we deliver the services our clients need in the manner that’s most actionable to them at their current scale.">
 <title>CSIRT Services &#183; IntrusionOps – MDR, DFIR, Red Team</title>
 <meta name=description content="IntrusionOps can act as your CSIRT or augment your existing CSIRT team.">
 <meta name=keywords content="Red Team,DFIR,MDR,incident response,adversary simulation,threat hunting,ransomware readiness,penetration test,pentest,c2,implant,malware,tunnel,reverse shell">
-<meta property="og:url" content="/service/dfir/csirt/">
+<meta property="og:url" content="https://intrusionops.com/service/dfir/csirt/">
 <meta property="og:title" content="CSIRT Services &#183; IntrusionOps – MDR, DFIR, Red Team">
 <meta name=og:description content="IntrusionOps can act as your CSIRT or augment your existing CSIRT team.">
-<meta name=twitter:url content="/service/dfir/csirt/">
-<meta property="og:image" content="images/logo.svg" key=ogimage>
-<link rel=canonical href=../../../service/dfir/csirt/>
+<meta name=twitter:url content="https://intrusionops.com/service/dfir/csirt/">
+<meta name=twitter:title content="IntrusionOps – MDR, DFIR, Red Team">
+<meta property="og:image" content="https://intrusionops.com/images/iopsog.png" key=ogimage>
+<meta property="twitter:image" content="https://intrusionops.com/images/iopsog.png">
+<link rel=canonical href=https://intrusionops.com/service/dfir/csirt/>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1">
 <meta name=description content="IntrusionOps can act as your CSIRT or augment your existing CSIRT team.">
@@ -29,7 +32,7 @@
 <link rel=stylesheet href=../../../plugins/animate/animate.css>
 <link rel=stylesheet href=../../../plugins/venobox/venobox.css>
 </noscript>
-<link rel=stylesheet href=../../../scss/style.min.423ba455943a6288b64eb4d371c2c2d8bf0837b939c88a3341f70127d2e787e9.css integrity="sha256-QjukVZQ6Yoi2TrTTccLC2L8IN7k5yIozQfcBJ9Lnh+k=" media=screen>
+<link rel=stylesheet href=https://intrusionops.com/scss/style.min.423ba455943a6288b64eb4d371c2c2d8bf0837b939c88a3341f70127d2e787e9.css integrity="sha256-QjukVZQ6Yoi2TrTTccLC2L8IN7k5yIozQfcBJ9Lnh+k=" media=screen>
 <link rel="shortcut icon" href=../../../images/favicon.ico type=image/x-icon>
 <link rel=icon href=../../../images/favicon.ico type=image/x-icon>
 </head>
@@ -95,7 +98,7 @@ CSIRT Services
 <blockquote>
 <p>A Computer Incident Response Team (CIRT) is a capability set up for the purpose of assisting in responding to computer security-related incidents</p>
 </blockquote>
-<p>Your company may already have an in-house CSIRT team and process. IntrusionOps CSIRT service is designed to compliment this service by offering additional technical resources or address skill or availability gaps. We learn and integrate into your existing process. Clients opt to send incidents for us to fully manage according to their playbooks, using a company-assigned e-mail address so that we&rsquo;re fully integrated with their team. During incidents, we can meet with other departments, stakeholders, legal, clients, and leadership with or on behalf of the CSIRT team.</p>
+<p>Your company may already have an in-house CSIRT team and process. IntrusionOps' CSIRT service is designed to compliment this service by offering additional technical resources or address skill or availability gaps. We learn and integrate into your existing process. Clients opt to send incidents for us to fully manage according to their playbooks, using a company-assigned e-mail address so that we&rsquo;re fully integrated with their team. During incidents, we can meet with other departments, stakeholders, legal, clients, and leadership with or on behalf of the CSIRT team.</p>
 <p>Use IntrusionOps' CSIRT service to introduce a CSIRT capability to your company, or to rapidly add technical muscle to your existing team.</p>
 <p>Read more about the forensic services available via a retainer <a href=../dfir title=here>
 here</a>.</p>
@@ -161,6 +164,6 @@ here</a>.</p>
 <script src=../../../plugins/search/fuse.min.js></script>
 <script src=../../../plugins/search/mark.js></script>
 <script src=../../../plugins/search/search.js></script>
-<script src=../../../js/script.min.js></script>
+<script src=https://intrusionops.com/js/script.min.js></script>
 </body>
 </html>
