--- a/service/dfir/index.html
+++ b/service/dfir/index.html
@@ -4,15 +4,18 @@
 <meta property="og:type" content="website">
 <meta name=twitter:card content="summary_large_image" key=twcard>
 <meta name=twitter:site content="@IntrusionOps" key=twhandle>
+<meta name=twitter:description content="IntrusionOps provides Digital Forensics and Incident Response (DFIR), Managed Detection and Response (MDR), Red Team and general security services for companies ranging in size from a handful of founders with little more than an idea to multinational corporations.  Rather than apply a cookie cutter approach, we deliver the services our clients need in the manner that’s most actionable to them at their current scale.">
 <title>Digital Forensics & Incident Response &#183; IntrusionOps – MDR, DFIR, Red Team</title>
 <meta name=description content="We offer DFIR retainers, ad-hoc incident response, and full integration into your existing DFIR or CSIRT teams.">
 <meta name=keywords content="Red Team,DFIR,MDR,incident response,adversary simulation,threat hunting,ransomware readiness,penetration test,pentest,c2,implant,malware,tunnel,reverse shell">
-<meta property="og:url" content="/service/dfir/">
+<meta property="og:url" content="https://intrusionops.com/service/dfir/">
 <meta property="og:title" content="Digital Forensics & Incident Response &#183; IntrusionOps – MDR, DFIR, Red Team">
 <meta name=og:description content="We offer DFIR retainers, ad-hoc incident response, and full integration into your existing DFIR or CSIRT teams.">
-<meta name=twitter:url content="/service/dfir/">
-<meta property="og:image" content="images/logo.svg" key=ogimage>
-<link rel=canonical href=../../service/dfir/>
+<meta name=twitter:url content="https://intrusionops.com/service/dfir/">
+<meta name=twitter:title content="IntrusionOps – MDR, DFIR, Red Team">
+<meta property="og:image" content="https://intrusionops.com/images/iopsog.png" key=ogimage>
+<meta property="twitter:image" content="https://intrusionops.com/images/iopsog.png">
+<link rel=canonical href=https://intrusionops.com/service/dfir/>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1">
 <meta name=description content="We offer DFIR retainers, ad-hoc incident response, and full integration into your existing DFIR or CSIRT teams.">
@@ -29,7 +32,7 @@
 <link rel=stylesheet href=../../plugins/animate/animate.css>
 <link rel=stylesheet href=../../plugins/venobox/venobox.css>
 </noscript>
-<link rel=stylesheet href=../../scss/style.min.423ba455943a6288b64eb4d371c2c2d8bf0837b939c88a3341f70127d2e787e9.css integrity="sha256-QjukVZQ6Yoi2TrTTccLC2L8IN7k5yIozQfcBJ9Lnh+k=" media=screen>
+<link rel=stylesheet href=https://intrusionops.com/scss/style.min.423ba455943a6288b64eb4d371c2c2d8bf0837b939c88a3341f70127d2e787e9.css integrity="sha256-QjukVZQ6Yoi2TrTTccLC2L8IN7k5yIozQfcBJ9Lnh+k=" media=screen>
 <link rel="shortcut icon" href=../../images/favicon.ico type=image/x-icon>
 <link rel=icon href=../../images/favicon.ico type=image/x-icon>
 </head>
@@ -92,57 +95,57 @@ Digital Forensics & Incident Response
 <div class=container>
 <div class=row>
 <div class="col-lg-4 col-sm-6 mb-4">
-<a href=../../service/dfir/retainer/>
+<a href=https://intrusionops.com/service/dfir/retainer/>
 <div class="card border-0 rounded-0 box-shadow">
 <img class="card-img-top rounded-0" src=../../images/service/retainers.webp alt="Card image cap">
 <div class="card-body position-relative">
 <h4 class=card-title>
-<a class=text-dark href=../../service/dfir/retainer/>DFIR Retainers</a>
+<a class=text-dark href=https://intrusionops.com/service/dfir/retainer/>DFIR Retainers</a>
 </h4>
 <p class=card-text>IntrusionOps' DFIR retainer provides your company with with rapid on-demand forensic expertise if crisis hits.</p>
-<a href=../../service/dfir/retainer/ class="btn btn-secondary btn-arrow">Read More</a>
+<a href=https://intrusionops.com/service/dfir/retainer/ class="btn btn-secondary btn-arrow">Read More</a>
 </div>
 </div>
 </a>
 </div>
 <div class="col-lg-4 col-sm-6 mb-4">
-<a href=../../service/dfir/dfir/>
+<a href=https://intrusionops.com/service/dfir/dfir/>
 <div class="card border-0 rounded-0 box-shadow">
 <img class="card-img-top rounded-0" src=../../images/service/forensicservices.webp alt="Card image cap">
 <div class="card-body position-relative">
 <h4 class=card-title>
-<a class=text-dark href=../../service/dfir/dfir/>Digital Forensics and Incident Response</a>
+<a class=text-dark href=https://intrusionops.com/service/dfir/dfir/>Digital Forensics and Incident Response</a>
 </h4>
 <p class=card-text>IntrusionOps provides high-quality digital forensic services.</p>
-<a href=../../service/dfir/dfir/ class="btn btn-secondary btn-arrow">Read More</a>
+<a href=https://intrusionops.com/service/dfir/dfir/ class="btn btn-secondary btn-arrow">Read More</a>
 </div>
 </div>
 </a>
 </div>
 <div class="col-lg-4 col-sm-6 mb-4">
-<a href=../../service/dfir/breach/>
+<a href=https://intrusionops.com/service/dfir/breach/>
 <div class="card border-0 rounded-0 box-shadow">
 <img class="card-img-top rounded-0" src=../../images/service/breachass.webp alt="Card image cap">
 <div class="card-body position-relative">
 <h4 class=card-title>
-<a class=text-dark href=../../service/dfir/breach/>Breach Assessments</a>
+<a class=text-dark href=https://intrusionops.com/service/dfir/breach/>Breach Assessments</a>
 </h4>
 <p class=card-text>Our Breach Assessment service will hunt for any attackers in your environment.</p>
-<a href=../../service/dfir/breach/ class="btn btn-secondary btn-arrow">Read More</a>
+<a href=https://intrusionops.com/service/dfir/breach/ class="btn btn-secondary btn-arrow">Read More</a>
 </div>
 </div>
 </a>
 </div>
 <div class="col-lg-4 col-sm-6 mb-4">
-<a href=../../service/dfir/csirt/>
+<a href=https://intrusionops.com/service/dfir/csirt/>
 <div class="card border-0 rounded-0 box-shadow">
 <img class="card-img-top rounded-0" src=../../images/service/csirt.webp alt="Card image cap">
 <div class="card-body position-relative">
 <h4 class=card-title>
-<a class=text-dark href=../../service/dfir/csirt/>CSIRT Services</a>
+<a class=text-dark href=https://intrusionops.com/service/dfir/csirt/>CSIRT Services</a>
 </h4>
 <p class=card-text>IntrusionOps can act as your CSIRT or augment your existing CSIRT team.</p>
-<a href=../../service/dfir/csirt/ class="btn btn-secondary btn-arrow">Read More</a>
+<a href=https://intrusionops.com/service/dfir/csirt/ class="btn btn-secondary btn-arrow">Read More</a>
 </div>
 </div>
 </a>
@@ -209,6 +212,6 @@ Digital Forensics & Incident Response
 <script src=../../plugins/search/fuse.min.js></script>
 <script src=../../plugins/search/mark.js></script>
 <script src=../../plugins/search/search.js></script>
-<script src=../../js/script.min.js></script>
+<script src=https://intrusionops.com/js/script.min.js></script>
 </body>
 </html>
