--- a/service/mdr/index.html
+++ b/service/mdr/index.html
@@ -4,15 +4,18 @@
 <meta property="og:type" content="website">
 <meta name=twitter:card content="summary_large_image" key=twcard>
 <meta name=twitter:site content="@IntrusionOps" key=twhandle>
+<meta name=twitter:description content="IntrusionOps provides Digital Forensics and Incident Response (DFIR), Managed Detection and Response (MDR), Red Team and general security services for companies ranging in size from a handful of founders with little more than an idea to multinational corporations.  Rather than apply a cookie cutter approach, we deliver the services our clients need in the manner that’s most actionable to them at their current scale.">
 <title>Managed Detection & Response &#183; IntrusionOps – MDR, DFIR, Red Team</title>
 <meta name=description content="We ingest your relevant security logs into a SIEM, analyze them, and investigate incidents.">
 <meta name=keywords content="Red Team,DFIR,MDR,incident response,adversary simulation,threat hunting,ransomware readiness,penetration test,pentest,c2,implant,malware,tunnel,reverse shell">
-<meta property="og:url" content="/service/mdr/">
+<meta property="og:url" content="https://intrusionops.com/service/mdr/">
 <meta property="og:title" content="Managed Detection & Response &#183; IntrusionOps – MDR, DFIR, Red Team">
 <meta name=og:description content="We ingest your relevant security logs into a SIEM, analyze them, and investigate incidents.">
-<meta name=twitter:url content="/service/mdr/">
-<meta property="og:image" content="images/logo.svg" key=ogimage>
-<link rel=canonical href=../../service/mdr/>
+<meta name=twitter:url content="https://intrusionops.com/service/mdr/">
+<meta name=twitter:title content="IntrusionOps – MDR, DFIR, Red Team">
+<meta property="og:image" content="https://intrusionops.com/images/iopsog.png" key=ogimage>
+<meta property="twitter:image" content="https://intrusionops.com/images/iopsog.png">
+<link rel=canonical href=https://intrusionops.com/service/mdr/>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1">
 <meta name=description content="We ingest your relevant security logs into a SIEM, analyze them, and investigate incidents.">
@@ -29,7 +32,7 @@
 <link rel=stylesheet href=../../plugins/animate/animate.css>
 <link rel=stylesheet href=../../plugins/venobox/venobox.css>
 </noscript>
-<link rel=stylesheet href=../../scss/style.min.423ba455943a6288b64eb4d371c2c2d8bf0837b939c88a3341f70127d2e787e9.css integrity="sha256-QjukVZQ6Yoi2TrTTccLC2L8IN7k5yIozQfcBJ9Lnh+k=" media=screen>
+<link rel=stylesheet href=https://intrusionops.com/scss/style.min.423ba455943a6288b64eb4d371c2c2d8bf0837b939c88a3341f70127d2e787e9.css integrity="sha256-QjukVZQ6Yoi2TrTTccLC2L8IN7k5yIozQfcBJ9Lnh+k=" media=screen>
 <link rel="shortcut icon" href=../../images/favicon.ico type=image/x-icon>
 <link rel=icon href=../../images/favicon.ico type=image/x-icon>
 </head>
@@ -92,29 +95,29 @@ Managed Detection & Response
 <div class=container>
 <div class=row>
 <div class="col-lg-4 col-sm-6 mb-4">
-<a href=../../service/mdr/mdr/>
+<a href=https://intrusionops.com/service/mdr/mdr/>
 <div class="card border-0 rounded-0 box-shadow">
 <img class="card-img-top rounded-0" src=../../images/service/mdr.webp alt="Card image cap">
 <div class="card-body position-relative">
 <h4 class=card-title>
-<a class=text-dark href=../../service/mdr/mdr/>Managed Detection & Response</a>
+<a class=text-dark href=https://intrusionops.com/service/mdr/mdr/>Managed Detection & Response</a>
 </h4>
 <p class=card-text>We ingest your relevant security logs into a SIEM, analyze them, and investigate incidents.</p>
-<a href=../../service/mdr/mdr/ class="btn btn-secondary btn-arrow">Read More</a>
+<a href=https://intrusionops.com/service/mdr/mdr/ class="btn btn-secondary btn-arrow">Read More</a>
 </div>
 </div>
 </a>
 </div>
 <div class="col-lg-4 col-sm-6 mb-4">
-<a href=../../service/mdr/threat-hunting/>
+<a href=https://intrusionops.com/service/mdr/threat-hunting/>
 <div class="card border-0 rounded-0 box-shadow">
 <img class="card-img-top rounded-0" src=../../images/service/threat_hunting.webp alt="Card image cap">
 <div class="card-body position-relative">
 <h4 class=card-title>
-<a class=text-dark href=../../service/mdr/threat-hunting/>Threat Hunting</a>
+<a class=text-dark href=https://intrusionops.com/service/mdr/threat-hunting/>Threat Hunting</a>
 </h4>
 <p class=card-text>Our threat hunters search your environment for unauthorized activity.</p>
-<a href=../../service/mdr/threat-hunting/ class="btn btn-secondary btn-arrow">Read More</a>
+<a href=https://intrusionops.com/service/mdr/threat-hunting/ class="btn btn-secondary btn-arrow">Read More</a>
 </div>
 </div>
 </a>
@@ -181,6 +184,6 @@ Managed Detection & Response
 <script src=../../plugins/search/fuse.min.js></script>
 <script src=../../plugins/search/mark.js></script>
 <script src=../../plugins/search/search.js></script>
-<script src=../../js/script.min.js></script>
+<script src=https://intrusionops.com/js/script.min.js></script>
 </body>
 </html>
