--- a/service/redteam/purple/index.html
+++ b/service/redteam/purple/index.html
@@ -4,15 +4,18 @@
 <meta property="og:type" content="website">
 <meta name=twitter:card content="summary_large_image" key=twcard>
 <meta name=twitter:site content="@IntrusionOps" key=twhandle>
+<meta name=twitter:description content="IntrusionOps provides Digital Forensics and Incident Response (DFIR), Managed Detection and Response (MDR), Red Team and general security services for companies ranging in size from a handful of founders with little more than an idea to multinational corporations.  Rather than apply a cookie cutter approach, we deliver the services our clients need in the manner that’s most actionable to them at their current scale.">
 <title>Purple Teaming &#183; IntrusionOps – MDR, DFIR, Red Team</title>
 <meta name=description content="Collaboration between Red and Blue Teams for validation and improvement of detection capabilities">
 <meta name=keywords content="Red Team,DFIR,MDR,incident response,adversary simulation,threat hunting,ransomware readiness,penetration test,pentest,c2,implant,malware,tunnel,reverse shell">
-<meta property="og:url" content="/service/redteam/purple/">
+<meta property="og:url" content="https://intrusionops.com/service/redteam/purple/">
 <meta property="og:title" content="Purple Teaming &#183; IntrusionOps – MDR, DFIR, Red Team">
 <meta name=og:description content="Collaboration between Red and Blue Teams for validation and improvement of detection capabilities">
-<meta name=twitter:url content="/service/redteam/purple/">
-<meta property="og:image" content="images/logo.svg" key=ogimage>
-<link rel=canonical href=../../../service/redteam/purple/>
+<meta name=twitter:url content="https://intrusionops.com/service/redteam/purple/">
+<meta name=twitter:title content="IntrusionOps – MDR, DFIR, Red Team">
+<meta property="og:image" content="https://intrusionops.com/images/iopsog.png" key=ogimage>
+<meta property="twitter:image" content="https://intrusionops.com/images/iopsog.png">
+<link rel=canonical href=https://intrusionops.com/service/redteam/purple/>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1">
 <meta name=description content="Collaboration between Red and Blue Teams for validation and improvement of detection capabilities">
@@ -29,7 +32,7 @@
 <link rel=stylesheet href=../../../plugins/animate/animate.css>
 <link rel=stylesheet href=../../../plugins/venobox/venobox.css>
 </noscript>
-<link rel=stylesheet href=../../../scss/style.min.423ba455943a6288b64eb4d371c2c2d8bf0837b939c88a3341f70127d2e787e9.css integrity="sha256-QjukVZQ6Yoi2TrTTccLC2L8IN7k5yIozQfcBJ9Lnh+k=" media=screen>
+<link rel=stylesheet href=https://intrusionops.com/scss/style.min.423ba455943a6288b64eb4d371c2c2d8bf0837b939c88a3341f70127d2e787e9.css integrity="sha256-QjukVZQ6Yoi2TrTTccLC2L8IN7k5yIozQfcBJ9Lnh+k=" media=screen>
 <link rel="shortcut icon" href=../../../images/favicon.ico type=image/x-icon>
 <link rel=icon href=../../../images/favicon.ico type=image/x-icon>
 </head>
@@ -160,6 +163,6 @@ Purple Teaming
 <script src=../../../plugins/search/fuse.min.js></script>
 <script src=../../../plugins/search/mark.js></script>
 <script src=../../../plugins/search/search.js></script>
-<script src=../../../js/script.min.js></script>
+<script src=https://intrusionops.com/js/script.min.js></script>
 </body>
 </html>
