--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
 <meta name=twitter:card content="summary_large_image" key=twcard>
 <meta name=twitter:site content="@IntrusionOps" key=twhandle>
 <meta name=twitter:description content="IntrusionOps provides Digital Forensics and Incident Response (DFIR), Managed Detection and Response (MDR), Red Team and general security services for companies ranging in size from a handful of founders with little more than an idea to multinational corporations.  Rather than apply a cookie cutter approach, we deliver the services our clients need in the manner that’s most actionable to them at their current scale.">
+<meta property="twitter:domain" content="intrusionops.com">
+<meta name=twitter:image content="https://intrusionops.com/images/iopsog.png">
 <title>IntrusionOps – MDR, DFIR, Red Team</title>
 <meta name=description content="IntrusionOps provides Digital Forensics and Incident Response (DFIR), Managed Detection and Response (MDR), Red Team and general security services for companies ranging in size from a handful of founders with little more than an idea to multinational corporations.  Rather than apply a cookie cutter approach, we deliver the services our clients need in the manner that’s most actionable to them at their current scale.">
 <meta name=keywords content="Red Team,DFIR,MDR,incident response,adversary simulation,threat hunting,ransomware readiness,penetration test,pentest,c2,implant,malware,tunnel,reverse shell">
 <meta property="og:url" content="https://intrusionops.com" key=ogurl>
 <meta property="og:title" content="IntrusionOps – MDR, DFIR, Red Team" key=ogtitle>
-<meta name=og:description content="IntrusionOps provides Digital Forensics and Incident Response (DFIR), Managed Detection and Response (MDR), Red Team and general security services for companies ranging in size from a handful of founders with little more than an idea to multinational corporations.  Rather than apply a cookie cutter approach, we deliver the services our clients need in the manner that’s most actionable to them at their current scale." key=ogdesc>
+<meta property="og:description" content="IntrusionOps provides Digital Forensics and Incident Response (DFIR), Managed Detection and Response (MDR), Red Team and general security services for companies ranging in size from a handful of founders with little more than an idea to multinational corporations.  Rather than apply a cookie cutter approach, we deliver the services our clients need in the manner that’s most actionable to them at their current scale." key=ogdesc>
 <meta property="og:image" content="https://intrusionops.com/images/iopsog.png" key=ogimage>
-<meta property="twitter:image" content="https://intrusionops.com/images/iopsog.png">
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1">
 <meta name=description content="IntrusionOps provides Digital Forensics and Incident Response (DFIR), Managed Detection and Response (MDR), Red Team and general security services for companies ranging in size from a handful of founders with little more than an idea to multinational corporations.  Rather than apply a cookie cutter approach, we deliver the services our clients need in the manner that’s most actionable to them at their current scale.">
