--- a/service/dev/dev/index.html
+++ b/service/dev/dev/index.html
@@ -103,7 +103,7 @@ Software Development
 <p><strong>Custom Red Team tooling.</strong> We can design or implement your design for command and control (C2), payload servers, obfuscators, launchers, etc. Services are available in C, C++, Golang, Python, and others upon request. We can also build Red Team infrastructure using ansible and CloudFormation or terraform.</p>
 </li>
 <li>
-<p><strong>Defensive integrations.</strong> If you&rsquo;ve invested in SOAR, EDR, or XDR and have workflows or playbooks you&rsquo;d like to automate, we can write the code for you. Reduce repetative tasks through automating activities like triage, and various incident analysis. If it has an API, we can work with it and build integrations between your tools to automate investigations, response, and other security tasks. We&rsquo;ll help your infosec team&rsquo;s efficiency so they can work smarter.</p>
+<p><strong>Defensive integrations.</strong> If you&rsquo;ve invested in SOAR, EDR, or XDR and have workflows or playbooks you&rsquo;d like to automate, we can write the code for you. Reduce repetitive tasks through automating activities like triage, and various incident analysis. If it has an API, we can work with it and build integrations between your tools to automate investigations, response, and other security tasks. We&rsquo;ll help your infosec team&rsquo;s efficiency so they can work smarter.</p>
 </li>
 <li>
 <p><strong>AWS Development.</strong> We can implement security controls in your existing IaC code base including CloudFormation or terraform. We can create code from scratch, or introduce hardening and security best practices into your existing code base.</p>
