--- a/service/redteam/rt/index.html
+++ b/service/redteam/rt/index.html
@@ -100,7 +100,7 @@ Red Team
 <p><strong>Red Teaming provides real-world validation of your defensive technical controls, detection capabilities, and IR processes.</strong></p>
 <p>You&rsquo;ve invested substantial time and money in endpoint protection, patch management, firewalls, vulnerability scanning, SIEM, 24x7 monitoring, have a threat hunting program, and authored incident response playbooks, but how do you know its all working as designed? Red Teaming is the ultimate quality assurance test of your whole defensive program.</p>
 <blockquote>
-<p><em><strong>A Red Team exercise provides technical and non-technical leadership alike answers to the important question &ldquo;How would we fare against a targeted cyber attack and are our defensive investments working?"</strong></em></p>
+<p><em><strong>A Red Team exercise provides technical and non-technical leadership alike answers to the important question &ldquo;How would we fare against a targeted attack and are our defensive investments working?"</strong></em></p>
 </blockquote>
 <p>Our Red Team engagements are covert, intended to evade or deceive detection mechanisms. Engagements typically last 8-12 weeks to allow time for covertness, detailed reconnaissance, payload development, and social engineering plot development and execution, and in some cases, travel. Significant effort is spent discovering the target defensive technologies and preparing attacks to escape discovered defenses in a lab environment.</p>
 <p>Our team are all students of public Advanced Persistent Threat (APT) reports and pursue learning what intelligence agencies and criminal gangs are using in order to re-purpose these techniques for our clients.</p>
