Red Teamer => Red Team

--- a/service/redteam/rra/index.html
+++ b/service/redteam/rra/index.html
@@ -108,7 +108,7 @@ Ransomware Readiness
 <li>Network segmentation architecture review. This is a technical discussion to verify segmentation is in place and is effective.</li>
 <li>Ransomware simulation drill. We run neutered ransomware on an endpoint that triggers TTP that are classified as ransomware. This is a blind test that verifies your detections are effective, and to measure your respond time and procedures.</li>
 </ul>
-<p>All project components are delivered by senior experienced Red Teamer members closely familiar with modern ransomware groups' tactics.</p>
+<p>All project components are delivered by senior experienced Red Team members closely familiar with modern ransomware groups' tactics.</p>
 <p>You&rsquo;ll receive a report detailing how you did and will document any gaps and how we recommend addressing them. In many cases, we can assist correcting issues or introduce you to someone else that can.</p>
 <p>This service can be tailored. Some clients already know their gaps and benefit more from us focusing on hardening and improving detections. In these cases, we bring in members from our Red Team and MDR team to implement hardening and develop detections, while the Red Team launches attacks validating the hardening effectiveness.</p>
 </div>
